feat: Improvement Java implementation